# static-array

./: CHANGELOG.md  Cargo.toml
src/: lib.rs
