[package]
name = "static-array"
version = "0.5.2"
authors = [
    "WhyAreAllTheseTaken <48136416+WhyAreAllTheseTaken@users.noreply.github.com>"
]
edition = "2021"
resolver = "2"
description = "A no-std rust crate providing a heap-allocated non-resizable type-checked array."
homepage = "https://github.com/Tomaso2468/static-array"
repository = "https://github.com/Tomaso2468/static-array"
keywords = ["array", "static", "heap", "allocation"]
categories = ["no-std"]
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "Cargo.lock",
    "src/**.rs",
    "CHANGELOG.md"
]
license = "BSD-3-Clause"

[dependencies]
rayon = { version = "1.8.1", optional = true }

[features]
rayon = ["dep:rayon"]

